Moved the epiceditorjs code to a vendor folder

--- a/Templates/editor.gohtml
+++ b/Templates/editor.gohtml
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 
 		<link href="/css/editor.css" rel="stylesheet" type="text/css">
-		<script type="text/javascript" src="/js/epiceditor.min.js"></script>
+		<script type="text/javascript" src="/js/vendor/epiceditor.min.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<title>
 			{{.Title}} | Jungle Coder
