--- a/Templates/editor.gohtml
+++ b/Templates/editor.gohtml
@@ -36,7 +36,7 @@
 	<script type="text/javascript">
 		var opts = {
 			textarea: "article",
-			basePath: "/js/epiceditor/themes",
+			basePath: "/js/vendor/epiceditor/themes",
 			theme: {
 				base: "/base/epiceditor.css",
 				editor: "/editor/epic-light.css",
