Updated readme and a template

--- a/Templates/blogPost.gohtml
+++ b/Templates/blogPost.gohtml
@@ -51,8 +51,7 @@
 			<div class="content left">
 				<form action="/submitComment/{{.URL}}" method="post" id="bottomComment">
 					<fieldset>
-						<textarea name="Comment" id="comment" cols="30" rows="10" placeholder="What did you want to say?...">
-	</textarea><br>
+						<textarea name="Comment" id="comment" cols="30" rows="10" placeholder="What did you want to say?..."></textarea><br>
 						Email:*<input type="text" name="email"><br>
 						Name:*<input type="text" name="author"><br>
 						Reqired fields are marked with a '*'<br>
