--- a/Templates/editor.gohtml
+++ b/Templates/editor.gohtml
@@ -6,7 +6,7 @@
 
 		<link href="/css/editor.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="/js/vendor/epiceditor.min.js"></script>
-		 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+		 <script src="/js/jquery1_4_2.js"></script>
 		<title>
 			{{.Title}} | Jungle Coder
 		</title>
@@ -21,12 +21,14 @@
 			{{template "sidebar" .}}
 
 			</div>
-			<form action="/admin/edit/{{.URL}}" method="POST">
+			<!--action="/admin/edit/{{.URL}}" -->
+			<form method="POST" id="submission">
 				<label for="Title">Title: </label>
 				<input type="text" id="Title" name="Title" placeholder="Title Here" class="bigInput" value="{{.Title}}">
 				<br>
 
-				<button>Save draft</button>
+				<button id="save" formAction="/admin/edit/{{.URL}}">Save draft</button>
+				<button id="publish" formAction="/admin/publish/{{.URL}}">Publish article</button>
 				<!--This label will be in the post creator, but not the post editor-->
 				<!--<label for="URL">Slug: </label><input type="text" id="URL" name="URL" placeholder="ArticleSlug" class="bigInput" value="{{.URL}}">-->
 			<div id="epiceditor" class="content left"></div>
@@ -47,10 +49,19 @@
 				maxHeight: 600,
 			}
 		};
+		//This is a replace regex for the form action.
+		var search = /^\/admin\/\w+\/(\w+)\/$/;
 		var editor = new EpicEditor(opts).load();
-
+		var publishReplace = function (str) {
+			var s = str.replace(search, "/admin/publish/$1"); 
+			return s;
+		}
+		var editReplace = function (str) {
+			var s = str.replace(search, "/admin/edit/$1");
+			return s;
+		}
 		$(document).ready(function($) {
-			$("input#Title").bind("keypress", function (e) {
+			$("input#Title").bind("keyup", function (e) {
 				document.title = this.value + " | Jungle Coder";
 			});	
 		});
