--- a/Templates/sidebar.gohtml
+++ b/Templates/sidebar.gohtml
@@ -1,4 +1,4 @@
-
+{{define "sidebar"}}
 			<div class="content">
 				<div class="sidebar-link"><a href="/">Home</a></div>
 				<div class="sidebar-link"><a href="/blog/AboutMe">About Me</a></div>
@@ -25,3 +25,4 @@
 				{{end}}
 				</div>
 			</div>
+{{end}}
