--- a/Templates/blogRoll.gohtml
+++ b/Templates/blogRoll.gohtml
@@ -26,7 +26,7 @@
 					{{/*The Model for this page is literally a list of articles. */}} 
 					{{range .}}
 					<h2>
-						<a class="title" href="/blog/{{.URL}}">{{.Title}}</a> 
+						<a class="title" href="/blog/{{.URL}}">{{.Title}} {{if isDraft .}} - Draft{{end}}</a> 
 						{{if .IsAdmin }}
 						<a class="title" href="/admin/edit/{{.URL}}"> | (Edit)</a>
 						{{end}}
