Add syntax highlighting to blog articles

--- a/Templates/blogPost.gohtml
+++ b/Templates/blogPost.gohtml
@@ -10,7 +10,7 @@
 			{{.Title}} | Jungle Coder
 		</title>
 	</head>
-	<body>
+	<body onload="prettyPrint();">
 		<div class="headingBacker">
 			<a class="heading" href="/">Jungle Coder</a>
 			<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
