--- a/Templates/blogRoll.gohtml
+++ b/Templates/blogRoll.gohtml
@@ -3,12 +3,13 @@
 <html>
 	<head>
 		<link href="/css/homepage.css" rel="stylesheet" type="text/css">
-		
+		<link href="/css/prettify.css" type="text/css" rel="stylesheet" />
+		<script type="text/javascript" src="/js/prettify.js"></script>
 		<title>
 			Jungle Coder
 		</title>
 	</head>
-	<body>
+	<body onload="prettyPrint();">
 		<div class="headingBacker">
 			<a class="heading" href="/">Jungle Coder</a>
 			<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
