Use left alignment

--- a/Templates/blogPost.gohtml
+++ b/Templates/blogPost.gohtml
@@ -12,8 +12,10 @@
 	</head>
 	<body onload="prettyPrint();">
 		<div class="headingBacker">
-			<a class="heading" href="/">Jungle Coder</a>
-			<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
+			<div class="headingForeground">
+				<a class="heading" href="/">Jungle Coder</a>
+				<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
+			</div>
 		</div>
 		<div id="main">
 			<div class="sidebar">
