--- a/Templates/Login.gohtml
+++ b/Templates/Login.gohtml
@@ -10,8 +10,10 @@
 	</head>
 	<body>
 		<div class="headingBacker">
-			<a class="heading" href="/">Jungle Coder</a>
-			<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
+			<div class="headingForeground">
+				<a class="heading" href="/">Jungle Coder</a>
+				<p id="motto"><i>The musings of a third culture coder and missionary kid</i></p>
+			</div>
 		</div>
 		<div id="main">
 			<div class="sidebar">
