Centralize comment admin

--- a/Templates/blogPost.gohtml
+++ b/Templates/blogPost.gohtml
@@ -1,6 +1,4 @@
-{{define "blogPost"}}
-{{$isAdmin := .IsAdmin}}
-<!DOCTYPE html>
+{{define "blogPost"}}{{$isAdmin := .IsAdmin}}<!DOCTYPE html>
 <html>
 	<head>
 		<link href="/css/homepage.css" rel="stylesheet" type="text/css">
